--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,6 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Token": {
+    "Audience": "https://localhost:7237/api/",
+    "Issuer": "https://localhost:7237/api/  ",
+    "SecurityKey": "Param-Dotnet-Practicum"
+  },
   "AllowedHosts": "*",
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
